# ARES-Autonomous-Reasoning-Execution-System

./: .gitignore  README.md  com.ares.daemon.plist  install.sh  pyproject.toml
ares/: __init__.py  __main__.py  audit.py  cli.py  config.py  daemon.py  discovery.py  memory.py  reasoning.py  sync.py
ares/llm/: __init__.py  cloud.py  local.py  router.py
ares/tasks/: executor.py  queue.py
ares/tools/: n8n.py  registry.py
ares/workflows/: youtube.py
